Resolve "Fix navbar alignment"

--- a/frontend/src/Home/Home.css
+++ b/frontend/src/Home/Home.css
@@ -2,6 +2,7 @@
 
 .navbar{
   flex-direction: column;
+  width: 100%;
 }
 
 .Logo{
